--- a/app/views/record_shared/_list_view_table.html.erb
+++ b/app/views/record_shared/_list_view_table.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-12 columns">
-    <%= render :partial => "record_shared/header", locals: { model: model, record: record, modules: @user_modules } %>
+    <%= render :partial => "record_shared/header", locals: { model: model, record: record, modules: @current_modules } %>
     <div class="clearfix"></div>
 
     <%#
