PRIMERO-455 Shared fields doesn't work for datepicker

--- a/app/views/form_section/_check_boxes.html.erb
+++ b/app/views/form_section/_check_boxes.html.erb
@@ -1,17 +1,18 @@
 <%
   field_keys ||= []
   name = field_tag_name formObject, check_boxes, field_keys
+  field_id = "#{check_boxes.form.name.dehumanize}_#{sanitize_to_id name}"
   value ||= field_value formObject, check_boxes, field_keys
 %>
 
 <div class="row">
   <div class="medium-4 columns">
-    <%= label_tag name, t(check_boxes.name, :default => check_boxes.display_name), {:class=>"key"}%>
+    <%= label_tag field_id, t(check_boxes.name, :default => check_boxes.display_name), {:class=>"key"}%>
   </div>
 
   <div class="medium-8 columns">
     <% check_boxes.options.each do |option| %>
-      <%checkbox_id = sanitize_to_id(name)+"_#{option.option_name.dehumanize}"%>
+      <%checkbox_id = "#{check_boxes.form.name.dehumanize}_#{sanitize_to_id(name)}_#{option.option_name.dehumanize}"%>
       <%= check_box_tag name+"[]", option.option_name, (value||[]).include?(option.option_name), :id => checkbox_id %>
       <%= label_tag checkbox_id, option.option_name %>
       <br>
