--- a/app/views/form_section/_date_field.html.erb
+++ b/app/views/form_section/_date_field.html.erb
@@ -1,17 +1,18 @@
 <%
    field_keys ||= []
    name = field_tag_name formObject, date_field, field_keys
+   field_id = "#{date_field.form.name.dehumanize}_#{sanitize_to_id name}"
    value ||= field_value formObject, date_field, field_keys
 %>
 
 <div class="row">
   <div class="medium-4 columns">
     <span class="tool-tip-label">
-      <%= label_tag name, t(date_field.name, :default => date_field.display_name), :class=>'key' %>
+      <%= label_tag field_id, t(date_field.name, :default => date_field.display_name), :class=>'key' %>
     </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_field_tag name, value, :class => 'form_date_field', :disabled => date_field.editable == false ? true : false %>
+    <%= text_field_tag name, value, :class => 'form_date_field', :id => field_id, :disabled => date_field.editable == false ? true : false %>
     <%= image_tag "new/icon_help.png", class: 'tool-tip-icon vtip', title: date_field.help_text.present? ? date_field.help_text: "(dd-mmm-yyyy)" %>
   </div>
 </div>
