--- a/app/views/form_section/_radio_button.html.erb
+++ b/app/views/form_section/_radio_button.html.erb
@@ -1,17 +1,18 @@
 <%
   field_keys ||= []
   name = field_tag_name formObject, radio_button, field_keys
+  field_id = "#{radio_button.form.name.dehumanize}_#{sanitize_to_id name}"
   value ||= field_value formObject, radio_button, field_keys
 %>
 <div class="row">
   <div class="medium-4 columns">
-    <%= label_tag name, t(radio_button.name, :default => radio_button.display_name), {:class=>"key"}%>
+    <%= label_tag field_id, t(radio_button.name, :default => radio_button.display_name), {:class=>"key"}%>
   </div>
 
   <div class="medium-8 columns">
     <% show_horizontal = radio_button.options.select { |option| option.option_name.length > 8 }.blank? && radio_button.options.length <= 3 %>
     <% radio_button.options.each do |option| %>
-      <%radio_button_id = sanitize_to_id(name)+"_#{option.option_name.dehumanize}"%>
+      <%radio_button_id = "#{radio_button.form.name.dehumanize}_#{sanitize_to_id(name)}_#{option.option_name.dehumanize}"%>
       <%= radio_button_tag name, option.option_name, (value||[]).include?(option.option_name), :id => radio_button_id %>
       <%= label_tag radio_button_id, option.option_name %>
       <% unless show_horizontal %>
