--- a/app/views/form_section/_repeatable_text_field.html.erb
+++ b/app/views/form_section/_repeatable_text_field.html.erb
@@ -1,8 +1,11 @@
-<% input_name = "child[#{form_name}][#{field["name"]}][]" %>
+<%
+  input_name = "child[#{form_name}][#{field["name"]}][]"
+  field_id = "#{form_name.dehumanize}_#{sanitize_to_id input_name}"
+%>
 
 <p>
-  <%= label_tag input_name, field["name"].humanize %><br/>
-  <%= text_field_tag input_name %>
+  <%= label_tag field_id, field["name"].humanize %><br/>
+  <%= text_field_tag input_name, :id => field_id %>
 </p>
 
 <button type="button" onclick="rapidftr.clone_field('<%="child_#{field["name"]}"%>')">Add another</button>
