--- a/app/views/form_section/_text_field.html.erb
+++ b/app/views/form_section/_text_field.html.erb
@@ -1,6 +1,7 @@
 <%
   field_keys ||= []
   name = field_tag_name formObject, text_field, field_keys
+  field_id = "#{text_field.form.name.dehumanize}_#{sanitize_to_id name}"
   value ||= field_value formObject, text_field, field_keys
   show_hide_text_link = text_field.hidden_text_field && !formObject.new_record?
   hide_text_link_text = formObject.hidden_name ? I18n.t("cases.view_name") : I18n.t("cases.hide_name")
@@ -11,11 +12,11 @@
 <div class="row">
   <div class="medium-4 columns">
     <span class="tool-tip-label">
-      <%= label_tag name, t(text_field.name, :default => text_field.display_name), :class=>'key' %>
+      <%= label_tag field_id, t(text_field.name, :default => text_field.display_name), :class=>'key' %>
     </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_field_tag name, value, :disabled => disabled_field %>
+    <%= text_field_tag name, value, :disabled => disabled_field, :id => field_id %>
     <%= link_to(hide_text_link_text, hide_text_link_text.dehumanize, :class => "hidden_text_field", :action => hide_text_link_action) if show_hide_text_link %>
     <%= image_tag "new/icon_help.png", title: text_field.help_text, class: 'tool-tip-icon vtip' if text_field.help_text.present? %>
   </div>
