PRIMERO-119 CP-033 - Photo/Audio in Tracing Request form.
1. app/assets/javascripts/photo_audio_fields.js: Code refactored to work for other models(child, tracing_request, etc), the corresponding model is send in the attribute 'data-model'.
2. app/controllers/concerns/media_actions.rb: Code was moved from child_media_controller.rb and refactored to be shared with tracing_request_media_controller.rb.
3. app/controllers/tracing_requests_controller.rb: Code refactored to work like children controller and added the methods to respond to the media request photos and audio operations.
4. app/helpers/children_helper.rb: Move methods to other helpers (audio_helper.rb, photo_helper.rb) because they should work with other models such as tracing request, method was hardcode to work with child only.
5. app/helpers/tracing_requests_helper.rb: Minor change, those methods are unused.
6. app/models/ability.rb: Minor change, added missed permissions.
7. app/models/child.rb: Code refactored to move audio(audio_uploader.rb) and photo(photo_uploader.rb) operations to some helpers to shared the code with tracing request or other models, remove hardcoded child.
8. app/models/concerns/record.rb: Minor change, added some complementary methods.
9. app/models/tracing_request.rb: Added audio and photo operations.
10. app/views/* : Remove the hardcoded "child" and use the class name to dynamically generate the call to the corresponding model/controller methods.
11. spec/* and capybara_features/* : Update test cases to test audio and photo manage for tracing request. Added other scenarios like is for children controller. Lots of TODO like is for children because solr changes.
12. config/routes.rb: Added audio and photo routes like are for cases/children.
13. config/locales/en.yml: Update information for tracing requests.
14. Others refactoring to fix broken test cases because someelse change.

--- a/app/views/form_section/_audio_upload_box.html.erb
+++ b/app/views/form_section/_audio_upload_box.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="file medium-12 columns">
-    <%= label_tag "child[audio]", "Recorded Audio", :class=>'key' %>
-    <%= file_field_tag "child[audio]" %>
+    <%= label_tag "#{formObject.class.name.underscore.downcase}[audio]", "Recorded Audio", :class=>'key' %>
+    <%= file_field_tag "#{formObject.class.name.underscore.downcase}[audio]" %>
 
     <ul class="audio_player_section">
       <%= render :partial => "form_section/field_display_audio", :locals => {:field => nil, :formObject => formObject, :display_audio_delete_checkbox => true} %>
