--- a/app/views/tracing_requests/new.html.erb
+++ b/app/views/tracing_requests/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :breadcrumbs do %>
-  <%= t("tracing_requests.register_new_tracing_request") %>
+  <%= t("tracing_request.register_new_tracing_request") %>
 <% end %>
 <% content_for :record_sub_nav_controls do %>
   <%= render 'record_toolbar', tracing_request: @tracing_request %> 
