--- a/app/views/form_section/_field_display_photo.html.erb
+++ b/app/views/form_section/_field_display_photo.html.erb
@@ -18,7 +18,8 @@ $(function() {
 <div class="clearfix"></div>
 <div class="thumbnails photos">
   <% formObject.photos.each do |photo| %>
-      <div class="thumbnail"><%= link_to thumbnail_tag(formObject, photo.name), child_resized_photo_path(formObject, photo.name || formObject.current_photo_key, 328, :ts => formObject.last_updated_at) %></div>
+      <% photo_path = send("#{formObject.class.name.underscore.downcase}_resized_photo_path", formObject, photo.name || formObject.current_photo_key, 328, :ts => formObject.last_updated_at) %>
+      <div class="thumbnail"><%= link_to thumbnail_tag(formObject, photo.name), photo_path %></div>
   <% end %>
 </div>
 <div class="clearfix"></div>
