--- a/app/views/tracing_requests/edit.html.erb
+++ b/app/views/tracing_requests/edit.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <% content_for :breadcrumbs do %>
-  <%= t("tracing_requests.label") %>: <%= text_to_identify_tracing_request(@tracing_request) %>
+  <%= t("tracing_request.label") %>: <%= text_to_identify_tracing_request(@tracing_request) %>
 <% end %>
 
 <% content_for :header_message do %>    
