--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="large-4 medium-4 columns">
-    <h4>
-      <%= "Forms > #{@parent_form.humanize}"%>
-    </h4>
+    <%
+       #TODO i18n and STYLE
+    %>
+    <h4><%= "Forms > #{@parent_form.humanize}"%></h4>
   </div>
   <div class="large-8 medium-8 columns">
   </div>
