Refactoring record_toolbar, and fixed differences between cancel and reset, also fixed confirmation message.

--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :record_sub_nav_controls do %>
-  <%= render 'record_toolbar', child: @child %>  
+  <%= render_controls(@child, 'cases') %>  
 <% end %>
 
 <% content_for :breadcrumbs do %>
