--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -47,7 +47,7 @@ $(".profile-tools .investigated a").click( function(){
 <% end %>
 
 <% content_for :record_sub_nav_controls do %>
-  <%= render 'record_toolbar', child: @child %> 
+  <%= render_controls(@child, 'cases') %> 
 <% end %>
 
 <% content_for :breadcrumbs do %>
