--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :record_sub_nav_controls do %>
-  <%= render 'record_toolbar', child: @child %> 
+  <%= render_controls(@child, 'cases') %> 
 <% end %>
 
 <%= form_tag children_path, :multipart => true, :class => "default-form" do %>
