--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :record_sub_nav_controls do %>
-  <%= render 'record_toolbar', incident: @incident %> 
+  <%= render_controls(@incident) %> 
 <% end %>
 
 <% content_for :record_sub_nav do %>
