--- a/app/views/tracing_requests/edit.html.erb
+++ b/app/views/tracing_requests/edit.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :record_sub_nav_controls do %>
-  <%= render 'record_toolbar', tracing_request: @tracing_request %> 
+  <%= render_controls(@tracing_request) %> 
 <% end %>
 
 <% content_for :breadcrumbs do %>
