--- a/app/views/form_section/_field_display_subform.html.erb
+++ b/app/views/form_section/_field_display_subform.html.erb
@@ -25,7 +25,7 @@
         %>
         <% (subform_section.fields.select {|field| field.visible? }).each do |field| %>
           <%
-            formObject_i = subform_object["#{i}"]
+            formObject_i = subform_object[i]
             formObject_i[:hidden_name] = formObject.hidden_name
           %>
           <%= render :partial => "form_section/field_display_#{field.display_type}",  :locals=>{:field => field, :formObject=>formObject_i} %>
