--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -435,10 +435,10 @@ fieldset {
   }
 
   .collapse_expand_subform_header {
-    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
 
     label {
-      font-size: 1rem;
+      font-size: 1.5rem;
       cursor: default;
     }
 
@@ -469,14 +469,6 @@ fieldset {
 }
 
 h5.tool-tip-label {
-  border-bottom: 1px solid #ddd;
-
-  span {
-    background: $white_color;
-    float: left;
-    margin: -10px 0 0 8px;
-    padding: 0 10px;
-  }
 
   &:first-of-type {
     margin-bottom: 2rem;
@@ -485,7 +477,7 @@ h5.tool-tip-label {
   margin-top: 2rem;
 
   label {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
 
