--- a/app/views/form_section/index.html.erb
+++ b/app/views/form_section/index.html.erb
@@ -5,9 +5,11 @@
     %>
     <h4><%= "Forms > #{@parent_form.humanize}"%></h4>
   </div>
-  <div class="large-8 medium-8 columns">
+  <div class="large-6 medium-6 columns">
+  </div>
+  <div class="large-2 medium-2 columns">
       <%= select_tag :parent_form,
-                     options_for_select('case', 'incident'),
+                     options_for_select(['case', 'incident', 'tracing_request'], :include_blank => true),
                      :onchange => "if(this.value){window.location='?&parent_form='+this.value;}" %>
   </div>
 </div>
