PRIMERO-475 Incidents -> Incident form: Add client-side validation to To and From dates. The client side validation apply to any date range field on any form (Cases, Incident, TracingRequest).
1. date_range_validation.js: Contains the logic to make the validation. The validation is hookup to the submit event of the form with the class 'data-form', did in this way to avoid to hookup the event in to the login form for example. t
he default-form class is used in others forms not related to the cases, incidents or tracing request. To keep the validation errors the same, the errors container is created on flight is there is no one.

2. app/views/*/edit.html.erb and app/views/*/new.html.erb views, added the class to identify the forms that will have the validation.

3. app/views/form_section/_date_range.html.erb, passing the error messages in case validation fails, this will include the field name.

4. application.js: Some complementary methods to create the errors messages containers to look the same as the errors triggered by the server, this is a javascript validation so need to create on flight the container errors.

5. Added test cases.

--- a/app/views/tracing_requests/new.html.erb
+++ b/app/views/tracing_requests/new.html.erb
@@ -4,7 +4,7 @@
 <% content_for :record_sub_nav_controls do %>
   <%= render_controls(@tracing_request) %> 
 <% end %>
-<%= form_tag tracing_requests_path, :multipart => true, :class => "default-form" do %>
+<%= form_tag tracing_requests_path, :multipart => true, :class => "default-form data-form" do %>
     <div class="page-content-new row collapse" data-equalizer>
   	<%= hidden_field_tag "tracing_request[posted_from]", "Browser" %>
       <div class="large-4 medium-4 columns close-side-tab">
