--- a/app/views/form_section/_date_range.html.erb
+++ b/app/views/form_section/_date_range.html.erb
@@ -27,7 +27,7 @@
       <%= text_field_tag name, value_date_field, :class => 'form_date_field', :disabled => !date_range.editable, :id => field_id %>
       <%= image_tag "new/icon_help.png", class: 'tool-tip-icon vtip', title: date_range.help_text.present? ? date_range.help_text: "(dd-mmm-yyyy)" %>
     </div>
-    <div class="date_range" style ="<%= "display:none;" if date_or_date_range == "date" %>">
+    <div class="date_range" style ="<%= "display:none;" if date_or_date_range == "date" %>" data-on-errors="<%= t('errors.models.date_range_invalid', :field_name => date_range.display_name) %>">
       <span><%="#{I18n.t("fields.date_range.from")}:"%></span>
       <%= text_field_tag name.gsub(date_range[:name], "#{date_range[:name]}_from"), value_from, :class => 'form_date_field', :disabled => date_range.editable == false ? true : false, :id => "#{field_id}_from" %>
       <span><%="#{I18n.t("fields.date_range.to")}:"%></span>
