--- a/app/views/tracing_requests/edit.html.erb
+++ b/app/views/tracing_requests/edit.html.erb
@@ -20,7 +20,7 @@
 
 <div class="clearfix"></div>
 
-<%= form_tag tracing_request_path(@tracing_request), :method => :put, :multipart => true, :class => "edit-profile default-form" do %>
+<%= form_tag tracing_request_path(@tracing_request), :method => :put, :multipart => true, :class => "edit-profile default-form data-form" do %>
   <div class="page-content-new row collapse" data-equalizer>
     <div class="large-4 medium-4 columns close-side-tab">
       <div class="side-tab" data-equalizer-watch>
