--- a/app/views/children/_export.html.erb
+++ b/app/views/children/_export.html.erb
@@ -1,8 +1,8 @@
 <span class="export"> <%= link_to t("children.export"), "#", class: "green-button" %> </span>
 <div class="dropdown hide">
-    <% RapidftrAddon::ExportTask.active.each do |export_task| %>
-        <% if can?("export_#{export_task.id}".to_sym, Child) %>
-            <%= link_to t("addons.export_task.#{export_task.id}.one"), child_path(@child, :format => export_task.id, :per_page => :all), :class => "password-prompt" %>
+    <% Exporters::ACTIVE_EXPORTERS.each do |exporter| %>
+        <% if can?("export_#{exporter.id}".to_sym, Child) %>
+            <%= link_to t("addons.export_task.#{exporter.id}.one"), child_path(@child, :format => exporter.id, :per_page => :all), :class => "password-prompt" %>
         <% end %>
     <% end %>
 </div>
