--- a/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
+++ b/app/views/tracing_requests/_show_tracing_request_toolbar.html.erb
@@ -28,7 +28,7 @@
     <% end %>
 <% end %>
 <% if false %>
-<% if RapidftrAddon::ExportTask.active.any?{|export_task| can?("export_#{export_task.id}".to_sym, tracing_request)} %>
+<% if Exporters::ACTIVE_EXPORTERS.any?{|exporter| can?("export_#{exporter.id}".to_sym, tracing_request)} %>
     <li>
         <div class="btn dropdown_btn btn_export">
             <%= render 'export' %>
