--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -3,37 +3,69 @@
   documents = documents.select { |document| document["file_name"].present? && document["attachment_key"].present? }
 %>
 <div class="row">
-  <% if documents.present? && !formObject.new_record?%>
-    <div class="medium-4 columns">
-      <span class="tool-tip-label">
-        <%= label_tag I18n.t(document_upload_box.name, :default => document_upload_box.display_name) %>
-      </span>
-    </div>
-    <div class="medium-8 columns">
-      <% documents.each do |document| %>
-        <% checkbox_id = "delete_child_document_#{document["attachment_key"]}" %>
+  <p>
+    <%= I18n.t("fields.document_upload_box.file_restrictions_message") %>
+  </p>
+</div>
+<% if documents.present? && !formObject.new_record?%>
+  <% documents.each do |document| %>
+    <div class="row">
+      <div class="medium-4 columns">
+        <span class="tool-tip-label">
+          <%= label_tag I18n.t(document_upload_box.name, :default => document_upload_box.display_name) %>
+        </span>
+      </div>
+      <div class="medium-8 columns">
         <div>
           <span><%= document["file_name"] %></span>
         </div>
+      </div>
+      <div class="medium-4 columns">
+        <label class="key">Document Description</label>
+      </div>
+      <div class="medium-8 columns">
+        <% value = document["document_description"] || "" %>
+        <span class="value"><%= value %></span>
         <div>
+          <% checkbox_id = "delete_child_document_#{document["attachment_key"]}" %>
           <%= check_box_tag("delete_child_document[#{document["attachment_key"]}]", :id => checkbox_id) %>
           <%= label_tag checkbox_id, t("child.actions.delete_document") %>
         </div>
-      <% end %>
+      </div>
     </div>
   <% end %>
-</div>
+<% end %>
 <div>
   <div id="file-group">
     <div class="row">
       <div class="file medium-12 columns">
         <span class="tool-tip-label">
-          <%= label_tag "child[upload_document]", "Add Document", :class=>'key' %>
+          <%= label_tag "child[upload_document][0][document]", "Add Document", :class=>'key' %>
         </span>
-        <%= file_field_tag "child[upload_document][]", :id => "child_upload_document_1" %>
+        <%= file_field_tag "child[upload_document][0][document]", :id => "child_upload_document_0_document" %>
         <%= image_tag "new/icon_help.png", title: document_upload_box.help_text, class: 'tool-tip-icon vtip' if document_upload_box.help_text.present? %>
+        <div class="medium-4 columns">
+          <span class="tool-tip-label">
+            <%= label_tag "child[upload_document][0][document_description]", "Document Description", :class=>'key' %>
+          </span>
+        </div>
+        <div class="medium-8 columns">
+          <%= text_field_tag "child[upload_document][0][document_description]", "", :id => "child_upload_document_0_document_description" %>
+        </div>
       </div>
     </div>
+  </div>
+  <div id="document_upload_box_file_extension_popup_message" title="PRIMERO" style="display:none">
+    <p><%= I18n.t("errors.models.child.document_format") %></p>
+    <button type="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" onclick="$(this).parent().parent().remove();">
+    <span class="ui-button-text"><%= I18n.t("cases.ok") %></span>
+    </button>
+  </div>
+  <div id="document_upload_box_file_size_popup_message" title="PRIMERO" style="display:none">
+    <p><%= I18n.t("errors.models.child.document_size") %></p>
+    <button type="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" onclick="$(this).parent().parent().remove();">
+    <span class="ui-button-text"><%= I18n.t("cases.ok") %></span>
+    </button>
   </div>
   <%= link_to 'Add another document', '', id: 'add-document', class: 'green-button right' %>
 </div>
