--- a/app/views/form_section/_field_display_document.html.erb
+++ b/app/views/form_section/_field_display_document.html.erb
@@ -1,16 +1,21 @@
-<div class="row">
-  <div class="medium-4 columns">
-    <label class="key"><%= t(field.name, :default => field.display_name) %></label>
+<% if formObject["other_documents"].present? %>
+  <div class="uploaded-documents">
+    <% formObject["other_documents"].each do |document| %>
+      <div class="row">
+        <div class="medium-4 columns">
+          <label class="key document">Other Document</label>
+        </div>
+        <div class="medium-8 columns">
+          <%= link_to document["file_name"], child_document_url(formObject.id, document["attachment_key"]), :class => "document" %>
+        </div>
+        <div class="medium-4 columns">
+          <label class="key document-description">Document Description</label>
+        </div>
+        <div class="medium-8 columns">
+          <% value = document["document_description"] || "" %>
+          <span class="document-description"><%= value %></span>
+        </div>
+      </div>
+    <% end %>
   </div>
-  <div class="medium-8 columns">
-    <div class="documents">
-      <% if formObject["other_documents"].present? %>
-        <% formObject["other_documents"].each do |document| %>
-          <div>
-            <%= link_to document["file_name"], child_document_url(formObject.id, document["attachment_key"]) %>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-</div>
+<% end %>
