--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
     <header>
       <div class="large-12 columns">
         <%= link_to 'Primero', root_path, :class => 'logo left', id: "RapidFTR logo" %>
+        <div class="sublogo">Protection-related information management</div>
         <div class="right">
           <%= render :partial => "shared/header_links" %>
         </div>
