--- a/app/assets/stylesheets/primero.dataTables.scss
+++ b/app/assets/stylesheets/primero.dataTables.scss
@@ -14,14 +14,17 @@ table.dataTable {
    * Body styles
    */
 }
-table.dataTable thead th,
-table.dataTable tfoot th {
-  font-weight: bold;
-}
+
 table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
-  border-bottom: 1px solid #111111;
+  border-right: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  background: #ccc;
+  font-size: 0.875rem
+}
+table.dataTable thead th:first-child {
+  border-left: 1px solid #ccc;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
@@ -54,14 +57,22 @@ table.dataTable thead .sorting_desc_disabled {
   background: url(image_path("dataTables/sort_desc_disabled.png")) no-repeat center right;
 }
 table.dataTable tbody tr {
-  background-color: white;
+  
 }
 table.dataTable tbody tr.selected {
   background-color: #b0bed9;
 }
 table.dataTable tbody th,
 table.dataTable tbody td {
-  padding: 8px 10px;
+  padding: 15px 10px;
+  border-bottom: 1px dashed #ccc;
+  border-right: 1px solid #ccc;
+}
+table.dataTable tbody tr td:first-child {
+  border-left: 1px solid #ccc;
+}
+table.dataTable tbody tr:last-child td {
+  border-bottom: 1px solid #ccc;
 }
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
   border-top: 1px solid #dddddd;
@@ -195,9 +206,6 @@ table.dataTable.order-column.hover tbody tr.odd:hover.selected > .sorting_3,
 table.dataTable.order-column.hover tbody tr.even:hover.selected > .sorting_3 {
   background-color: #a4b2cb;
 }
-table.dataTable.no-footer {
-  border-bottom: 1px solid #111111;
-}
 table.dataTable.nowrap th, table.dataTable.nowrap td {
   white-space: nowrap;
 }
@@ -303,7 +311,7 @@ table.dataTable td {
   zoom: 1;
 }
 .dataTables_wrapper .dataTables_length {
-  float: left;
+  float: right;
 }
 .dataTables_wrapper .dataTables_filter {
   float: right;
@@ -313,12 +321,12 @@ table.dataTable td {
   margin-left: 0.5em;
 }
 .dataTables_wrapper .dataTables_info {
-  clear: both;
   float: left;
-  padding-top: 0.755em;
+  position: absolute;
+  margin: -40px 0 0 0;
 }
 .dataTables_wrapper .dataTables_paginate {
-  float: right;
+  float: left;
   text-align: right;
   padding-top: 0.25em;
 }
@@ -452,6 +460,14 @@ table.dataTable td {
   content: "";
   clear: both;
   height: 0;
+}
+
+.dataTables_wrapper .dataTables_length {
+  margin-top: 5px;
+
+  select {
+    width: 60px;
+  }
 }
 
 @media screen and (max-width: 767px) {
