--- a/app/views/shared/_pagination.html.erb
+++ b/app/views/shared/_pagination.html.erb
@@ -4,7 +4,8 @@
 		info: "<%= page_entries_info results %>",
 		start: "<%= results.offset %>",
 		total: "<%= total %>",
-		per: "<%= per %>"
+		per: "<%= per %>",
+		per_translation: "<%= t("per_page_translation")%>"
 	}
 </script>
 <% end %>
